--- a/manifest.json
+++ b/manifest.json
@@ -6,5 +6,18 @@
   "action": {
     "default_popup": "popup.html"
   },
-  "permissions": ["scripting", "activeTab"]
+  "permissions": ["scripting", "activeTab", "sidePanel"],
+  "background": {
+    "service_worker": "scripts/background.js"
+  },
+  "content_scripts": [
+    {
+      "matches": ["<all_urls>"],
+      "js": ["scripts/content.js"]
+    }
+  ],
+  "side_panel": {
+    "default_path": "sidePanel.html"
+  },
+  "host_permissions": ["*://*/*"]
 }
