--- a/manifest.json
+++ b/manifest.json
@@ -6,7 +6,7 @@
   "action": {
     "default_popup": "popup.html"
   },
-  "permissions": ["scripting", "activeTab", "sidePanel"],
+  "permissions": ["scripting", "activeTab", "sidePanel", "storage"],
   "background": {
     "service_worker": "scripts/background.js"
   },
@@ -19,5 +19,10 @@
   "side_panel": {
     "default_path": "sidePanel.html"
   },
+  "options_ui": {
+    "page": "options.html",
+    "open_in_tab": true
+  },
+
   "host_permissions": ["*://*/*"]
 }
